Remove apt-get upgrade and make test output verbose

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ env:
 install:
  - deactivate
  - sudo -E ./install-deps.sh
-script: python$TRAVIS_PYTHON_VERSION test.py
+script: python$TRAVIS_PYTHON_VERSION test.py -v
